--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -28,17 +28,15 @@ jobs:
 
       - name: Build with Code Coverage
         env:
-          scheme: ${{ 'default' }}
-          platform: ${{ 'iOS Simulator' }}
+          scheme: Memorize  # Directly specify the scheme here
+          platform: iOS Simulator
         run: |
           # Set up device name and build configuration
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          if [ $scheme = default ]; then scheme=$(cat default); fi
-          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
+          device="iPhone 14"  # Use a common simulator like iPhone 14
+          file_to_build="Memorize.xcodeproj"  # Specify your project or workspace file name here
           
           # Build for testing with code coverage enabled
-          xcodebuild build-for-testing -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device" ENABLE_CODE_COVERAGE=YES
+          xcodebuild build-for-testing -scheme "$scheme" -project "$file_to_build" -destination "platform=$platform,name=$device" ENABLE_CODE_COVERAGE=YES
 
       - name: Test with Coverage Report
         env:
