--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -29,10 +29,14 @@ jobs:
       - name: Build and Test
         env:
           platform: ${{ 'iOS Simulator' }}
-        run: xcodebuild test -project Memorize.xcodeproj -scheme Memorize -destination "platform=$platform,name=iPhone 16" -enableCodeCoverage YES build test
+        run: xcodebuild test -project Memorize.xcodeproj -scheme Memorize -destination "platform=$platform,name=iPhone 16" -enableCodeCoverage YES -derivedDataPath build
+
+      - name: Generate Reports
+        run: xcrun xccov view --report build/Logs/Test/*.xcresult
   
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: xmcnulty/Memorize-iOS
+          directory: build/Logs/Test/*.xcresult
