--- a/.github/workflows/ios-ci.yml
+++ b/.github/workflows/ios-ci.yml
@@ -15,6 +15,11 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
+
+      - name: Install xcresultparser
+        run: |
+          brew tap a7ex/homebrew-formulae
+          brew install xcresultparser
           
       - name: Checkout
         uses: actions/checkout@v4
@@ -22,10 +27,13 @@ jobs:
       - name: Build and Test
         env:
           platform: ${{ 'iOS Simulator' }}
-        run: xcodebuild test -project Memorize.xcodeproj -scheme Memorize -destination "platform=$platform,name=iPhone 16" -enableCodeCoverage YES -resultBundlePath artifacts/ResultBundle.xcresult
+        run: |
+          mkdir -p artifacts
+          xcodebuild test -project Memorize.xcodeproj -scheme Memorize -destination "platform=$platform,name=iPhone 16" -enableCodeCoverage YES -resultBundlePath artifacts/ResultBundle.xcresult
 
       - name: Convert xcresult to cobertura
-        run: xcresultparser --output-format cobertura "artifacts/ResultBundle.xcresult" > "artifacts/coverage.xml"
+        run: |
+          xcresultparser --output-format cobertura "artifacts/ResultBundle.xcresult" > "artifacts/coverage.xml"
   
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
